improved backend structure and applied profiles, also improved frontend ui